--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@ body {
   min-height: 100vh;
   position: relative;
   background-color: #51cbd0;
+  overflow: hidden;
 }
 
 /* line 14, style.scss */
